--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL=mongodb://127.0.0.1/your-database-name
+DATABASE_URL=libsql://your-database.turso.io
+DATABASE_AUTH_TOKEN=your-turso-auth-token
 PAYLOAD_SECRET=YOUR_SECRET_HERE
