--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@payloadcms/db-sqlite": "3.77.0",
     "@payloadcms/next": "3.77.0",
     "@payloadcms/richtext-lexical": "3.77.0",
+    "@payloadcms/storage-vercel-blob": "3.77.0",
     "@payloadcms/ui": "3.77.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@tabler/icons-react": "^3.36.1",
